@@ -1,6 +1,6 @@
 <?php
 /***************************************************************************
- *   Copyright (C) 2005 by Konstantin V. Arkhipov                          *
+ *   Copyright (C) 2006 by Konstantin V. Arkhipov                          *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -13,27 +13,8 @@
 	/**
 	 * @ingroup Containers
 	**/
-	abstract class ManyToManyLinked
-		extends UnifiedContainer
-		implements ManyToManyLinkedInfo
+	interface OneToManyLinkedInfo extends UnifiedContainerInfo
 	{
-		public function __construct(
-			Identifiable $parent, GenericDAO $dao, $lazy = true
-		)
-		{
-			parent::__construct($parent, $dao, $lazy);
-			
-			$worker =
-				$lazy
-					? 'ManyToManyLinkedLazy'
-					: 'ManyToManyLinkedFull';
-			
-			$this->worker = new $worker($this);
-		}
-		
-		public static function getParentTableIdField()
-		{
-			return 'id';
-		}
+		public static function isUnlinkable();
 	}
 ?>
