@@ -2,6 +2,8 @@
 
 2006-12-24	Konstantin V. Arkhipov
 
+	* main/Containers/Unified/: all pointer-methods are now static too.
+
 	* main/DAOs/InformedDAO.class.php: support interface for DAO's
 	pointer-methods, which are now static: getObjectName, getTable,
 	getSequence and getIdName.
